--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,9 +51,10 @@ dev_dependencies:
   shared_preferences: ^2.0.15
   flutter_dotenv: ^5.0.2
   flutter_secure_storage: ^8.0.0
-  cached_network_image: ^3.2.1
   url_launcher: ^6.1.9
   smooth_page_indicator: ^1.0.0
+  photo_view: ^0.14.0
+  cached_network_image: ^3.2.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
